@@ -1,5 +1,15 @@
 2011-04-29  Corinna Vinschen  <corinna@vinschen.de>
 
+	* advapi32.cc (GetTokenInformation): Remove.
+	(SetTokenInformation): Remove.
+	* grp.cc: Replace above functions throughout with their ntdll.dll
+	equivalent.
+	* sec_auth.cc: Ditto.
+	* syscalls.cc: Ditto.
+	* uinfo.cc: Ditto.
+
+2011-04-29  Corinna Vinschen  <corinna@vinschen.de>
+
 	* posix_ipc.cc (ipc_cond_timedwait): Only wait for pthread's
 	cancel_event if thread's cancelability isn't disabled.
 
